tests/purs/passing/Import/M2.purs
module M2 where

import M1

main = \_ -> foo 42
